Bug 278238 - Although encryption with untrusted keys is enabled they are not available in the kgpg-editor
Summary: Although encryption with untrusted keys is enabled they are not available in ...
Status: RESOLVED FIXED
Alias: None
Product: kgpg
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Rolf Eike Beer
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-22 01:37 UTC by mathias.anselmann
Modified: 2017-06-30 19:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.04.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mathias.anselmann 2011-07-22 01:37:29 UTC
Version:           1.0 (using KDE 4.6.4) 
OS:                Linux

I enabled "Allow encryption with untrusted keys" in the main options of kgpg.

If I then open the editor of kgpg in order to encrypt a text, in the "Select Public Key" dialogue the option "Allow encryption with untrusted keys" is also enabled but the untrusted keys are NOT listed in the available list of keys until I disable and enable the checkbox "Allow encryption with untrusted keys" in the dialogue manually. Then the keys are listed.

Reproducible: Always

Steps to Reproduce:
- Enable "Allow encryption with untrusted keys" in the main options of kgpg
- Start the kgpg editor
- try to encrypt a text in the editor to an untrusted user

Actual Results:  
- Keys of untrusted users are not available until you manually disable and enable the checkbox "Allow encryption with untrusted keys" in the "Select Public Key" dialogue of the kgpg editor

Expected Results:  
Untrusted keys should be visible

OS: Linux (x86_64) release 2.6.39.3-vanilla
Compiler: gcc
Comment 1 Rolf Eike Beer 2011-07-22 17:20:55 UTC
SVN commit 1242767 by dakon:

immediately honor encryption with untrusted keys setting

Make sure the proxy model gets the information right from the beginning if
those keys are allowed for encryption or not.

BUG:278238
FIXED-IN:4.7.1


 M  +1 -1      branches/KDE/4.6/kdeutils/kgpg/selectpublickeydialog.cpp  
 M  +1 -1      branches/KDE/4.7/kdeutils/kgpg/selectpublickeydialog.cpp  
 M  +1 -1      trunk/KDE/kdeutils/kgpg/selectpublickeydialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1242767
Comment 2 Rolf Eike Beer 2017-06-30 19:04:04 UTC
Git commit cc2362ff645ca5e85d1344eed70409c166a1a95e by Rolf Eike Beer.
Committed on 30/06/2017 at 19:02.
Pushed by dakon into branch 'Applications/17.04'.

Immediately honor encryption with untrusted keys setting

The previous fix was incomplete as it did not move the connect() to the right
place.

Thanks to rkfg for the patch.
Related: bug 381820
FIXED-IN:17.04.3

M  +2    -1    selectpublickeydialog.cpp

https://commits.kde.org/kgpg/cc2362ff645ca5e85d1344eed70409c166a1a95e