immediately honor encryption with untrusted keys setting

Make sure the proxy model gets the information right from the beginning if
those keys are allowed for encryption or not.

BUG:278238
FIXED-IN:4.7.1

svn path=/trunk/KDE/kdeutils/kgpg/; revision=1242767